Fixed: Attempted to fix the clipping of the nav on mobile

--- a/site-sass/components/sticky.scss
+++ b/site-sass/components/sticky.scss
@@ -16,12 +16,12 @@
 }
 
 .activeMobile {
-  top: -72px;
+  top: -71px;
   position: fixed;
 }
 
 .activatedPadding {
-  margin-top: 120px;
+  margin-top: 128px;
 }
 
 #masthead {
